--- a/tech.html
+++ b/tech.html
@@ -620,9 +620,11 @@
     </div>
 
     <div id="paymentInfo" class="payment-info">
-      <p>Access Premium Resources</p>
-      <p>Deposit Ksh 18</p>
-      <p>M-Pesa: 0790625309</p>
+      <p><strong>Unlock Exclusive Premium Resources Now!</strong></p>
+<p>Get instant access for just Ksh 88 per stack of resources. The perfect way to boost your knowledge and skills!</p>
+<p><strong>Pay via M-Pesa:</strong> 0790625309</p>
+<p><em>Hurry, your next big breakthrough is just one step away!</em></p>
+
       <button class="btn" id="proceedToSubmissionBtn">I've Made the Payment</button>
     </div>
 
