--- a/index.html
+++ b/index.html
@@ -108,42 +108,102 @@
     }
   </style>
 
-  <!-- Open Graph Meta Tags -->
-  <meta property="og:title" content="SolTech - Secure IT Solutions | Software Development & Cybersecurity">
-  <meta property="og:description"
-    content="SolTech offers secure IT solutions, software development, and cybersecurity services. We provide innovative technology solutions to help businesses thrive in a digital world.">
-  <meta property="og:image" content="https://www.yourdomain.com/assets/images/hero-banner.png">
-  <meta property="og:url" content="https://www.yourdomain.com/your-page-url">
-  <meta property="og:type" content="website">
+  <!-- Basic SEO Meta Tags -->
+<meta name="description" content="SolTech offers secure IT solutions including web development, app development, cybersecurity, and AI integration. Based in Nairobi, we create innovative solutions to solve real-world problems.">
+<meta name="keywords" content="web development, app development, cybersecurity, AI integration, machine learning, portfolio websites, commercial websites, Nairobi tech company, African tech solutions">
+<meta name="author" content="SolTech Solutions">
+<meta name="robots" content="index, follow">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-  <!-- Twitter Card Meta Tags -->
-  <meta name="twitter:card" content="summary_large_image">
-  <meta name="twitter:title" content="SolTech - Secure IT Solutions | Software Development & Cybersecurity">
-  <meta name="twitter:description"
-    content="SolTech offers secure IT solutions, software development, and cybersecurity services. We provide innovative technology solutions to help businesses thrive in a digital world.">
-  <meta name="twitter:image" content="https://www.yourdomain.com/assets/images/hero-banner.png">
-  <link rel="canonical" href="https://www.yourdomain.com/your-page-url" />
-  <script type="application/ld+json">
-  {
-    "@context": "https://schema.org",
-    "@type": "Organization",
-    "name": "SolTech Solutions",
-    "url": "https://www.yourdomain.com",
-    "logo": "https://www.yourdomain.com/assets/images/image26.png",
-    "contactPoint": {
-      "@type": "ContactPoint",
-      "telephone": "+254790625309",
-      "contactType": "customer service",
-      "email": "solutech888@gmail.com"
+<!-- Open Graph Meta Tags -->
+<meta property="og:title" content="SolTech - Web Development, App Development & AI Solutions | Nairobi">
+<meta property="og:description" content="SolTech offers comprehensive tech solutions including web development, app development, cybersecurity, and AI integration. Based in Nairobi, we create innovative solutions to solve real-world problems.">
+<meta property="og:image" content="https://soltechssolutions.com/assets/images/hero-banner.png">
+<meta property="og:url" content="https://soltechssolutions.com">
+<meta property="og:type" content="website">
+
+<!-- Twitter Card Meta Tags -->
+<meta name="twitter:card" content="summary_large_image">
+<meta name="twitter:title" content="SolTech - Web Development, App Development & AI Solutions | Nairobi">
+<meta name="twitter:description" content="SolTech offers comprehensive tech solutions including web development, app development, cybersecurity, and AI integration. Based in Nairobi, we create innovative solutions to solve real-world problems.">
+<meta name="twitter:image" content="https://soltechssolutions.com/assets/images/hero-banner.png">
+
+<!-- Language and Locale -->
+<meta http-equiv="content-language" content="en">
+<link rel="alternate" hreflang="en" href="https://soltechssolutions.com">
+<link rel="canonical" href="https://soltechssolutions.com" />
+
+<!-- Enhanced Schema.org Markup -->
+<script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "Organization",
+  "name": "SolTech Solutions",
+  "description": "Leading provider of web development, app development, cybersecurity, and AI integration services in Nairobi, Kenya",
+  "url": "https://soltechssolutions.com",
+  "logo": "https://soltechssolutions.com/assets/images/image26.png",
+  "foundingDate": "2024",
+  "address": {
+    "@type": "PostalAddress",
+    "addressCountry": "Kenya",
+    "addressLocality": "Nairobi",
+    "addressRegion": "Nairobi"
+  },
+  "contactPoint": {
+    "@type": "ContactPoint",
+    "telephone": "+254790625309",
+    "contactType": "customer service",
+    "email": "solutech888@gmail.com",
+    "availableLanguage": ["English"]
+  },
+  "sameAs": [
+    "https://www.tiktok.com/@_solutech",
+    "https://x.com/SolTech888",
+    "https://www.linkedin.com/company/solutech",
+    "https://www.instagram.com/_.solutech"
+  ],
+  "services": [
+    {
+      "@type": "Service",
+      "name": "Web Development",
+      "description": "Custom portfolio and commercial website development services",
+      "serviceType": "Web Development"
     },
-    "sameAs": [
-      "https://www.tiktok.com/@_solutech",
-      "https://x.com/SolTech888",
-      "https://www.linkedin.com/company/solutech",
-      "https://www.instagram.com/_.solutech"
-    ]
+    {
+      "@type": "Service",
+      "name": "App Development",
+      "description": "Custom mobile and web application development",
+      "serviceType": "Software Development"
+    },
+    {
+      "@type": "Service",
+      "name": "Cybersecurity",
+      "description": "Comprehensive cybersecurity solutions and consulting",
+      "serviceType": "Security"
+    },
+    {
+      "@type": "Service",
+      "name": "AI and Machine Learning Integration",
+      "description": "Implementation of AI and ML solutions for business optimization",
+      "serviceType": "Artificial Intelligence"
+    }
+  ],
+  "slogan": "Creating innovative solutions for real-world problems",
+  "areaServed": {
+    "@type": "City",
+    "name": "Nairobi",
+    "containedIn": "Kenya"
+  },
+  "foundingLocation": {
+    "@type": "Place",
+    "address": {
+      "@type": "PostalAddress",
+      "addressLocality": "Nairobi",
+      "addressCountry": "Kenya"
+    }
   }
-  </script>
+}
+</script>
   <script>
   (function (f, s, o, n) {
     f._vercelAnalytics = f._vercelAnalytics || [];
