--- a/tech.html
+++ b/tech.html
@@ -15,55 +15,91 @@
   <title>Tech Stack Roadmap - SolTech Solutions</title>
   <meta name="description" content="Explore comprehensive tech stack roadmaps for frontend, backend, full stack, AI, cybersecurity, and more. Get resources and guidance from SolTech Solutions.">
   
-  <!-- Open Graph Tags -->
-  <meta property="og:title" content="Tech Stack Roadmap - SolTech Solutions">
-  <meta property="og:description" content="Explore comprehensive tech stack roadmaps for frontend, backend, full stack, AI, cybersecurity, and more.">
-  <meta property="og:image" content="https://yourwebsite.com/assets/images/image26.png">
-  <meta property="og:url" content="https://yourwebsite.com/tech-roadmap">
-  <meta property="og:type" content="website">
+<!-- Basic SEO Meta Tags -->
+<meta name="description" content="Explore comprehensive tech stack roadmaps at SolTech Solutions. Expert guidance for frontend, backend, full stack, AI, cybersecurity career paths and development.">
+<meta name="keywords" content="tech roadmap, frontend development, backend development, full stack, AI development, cybersecurity career, technology career paths, Kenya tech education">
+<meta name="author" content="SolTech Solutions">
+<meta name="robots" content="index, follow">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-  <!-- Twitter Card Tags -->
-  <meta name="twitter:card" content="summary_large_image">
-  <meta name="twitter:title" content="Tech Stack Roadmap - SolTech Solutions">
-  <meta name="twitter:description" content="Explore comprehensive tech stack roadmaps for frontend, backend, full stack, AI, cybersecurity, and more.">
-  <meta name="twitter:image" content="https://yourwebsite.com/assets/images/image26.png">
+<!-- Open Graph Tags -->
+<meta property="og:title" content="Tech Stack Roadmap - SolTech Solutions">
+<meta property="og:description" content="Explore comprehensive tech stack roadmaps for frontend, backend, full stack, AI, cybersecurity, and more.">
+<meta property="og:image" content="https://soltechssolutions.com/assets/images/image26.png">
+<meta property="og:url" content="https://soltechssolutions.com/tech-roadmap">
+<meta property="og:type" content="website">
 
-  <!-- Canonical URL -->
-  <link rel="canonical" href="https://yourwebsite.com/tech-roadmap">
+<!-- Twitter Card Tags -->
+<meta name="twitter:card" content="summary_large_image">
+<meta name="twitter:title" content="Tech Stack Roadmap - SolTech Solutions">
+<meta name="twitter:description" content="Explore comprehensive tech stack roadmaps for frontend, backend, full stack, AI, cybersecurity, and more.">
+<meta name="twitter:image" content="https://soltechssolutions.com/assets/images/image26.png">
 
-  <!-- Favicon -->
-  <link rel="shortcut icon" href="assets/images/image26.png" type="image/png">
+<!-- Canonical URL -->
+<link rel="canonical" href="https://soltechssolutions.com/tech-roadmap">
 
-  <!-- Fonts -->
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&family=Be+Vietnam+Pro:wght@400;500;600;700&display=swap" rel="stylesheet">
+<!-- Favicon -->
+<link rel="shortcut icon" href="assets/images/image26.png" type="image/png">
 
-  <!-- Stylesheets -->
-  <link rel="stylesheet" href="assets/css/style.css">
+<!-- Fonts -->
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&family=Be+Vietnam+Pro:wght@400;500;600;700&display=swap" rel="stylesheet">
 
-  <!-- Structured Data -->
-  <script type="application/ld+json">
-    {
-      "@context": "https://schema.org",
+<!-- Stylesheets -->
+<link rel="stylesheet" href="assets/css/style.css">
+
+<!-- Structured Data -->
+<script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "WebPage",
+  "name": "Tech Stack Roadmap",
+  "description": "Comprehensive technology career roadmaps and learning paths",
+  "publisher": {
+    "@type": "Organization",
+    "name": "SolTech Solutions",
+    "url": "https://soltechssolutions.com",
+    "logo": "https://soltechssolutions.com/assets/images/image26.png",
+    "description": "Delivering innovative and secure IT solutions to empower businesses and individuals.",
+    "foundingDate": "2024",
+    "address": {
+      "@type": "PostalAddress",
+      "streetAddress": "Machakos Town",
+      "addressLocality": "Machakos",
+      "addressRegion": "Machakos",
+      "addressCountry": "Kenya"
+    },
+    "contactPoint": {
+      "@type": "ContactPoint",
+      "email": "solutech888@gmail.com",
+      "telephone": "+254790625309",
+      "contactType": "customer service",
+      "availableLanguage": ["English"]
+    }
+  },
+  "mainEntity": {
+    "@type": "Course",
+    "name": "Technology Career Roadmaps",
+    "description": "Comprehensive guidance for various technology career paths including frontend, backend, full stack development, AI, and cybersecurity",
+    "provider": {
       "@type": "Organization",
       "name": "SolTech Solutions",
-      "url": "https://yourwebsite.com",
-      "logo": "https://yourwebsite.com/assets/images/image26.png",
-      "description": "Delivering innovative and secure IT solutions to empower businesses and individuals.",
-      "address": {
-        "@type": "PostalAddress",
-        "streetAddress": "Machakos Town",
-        "addressLocality": "Machakos",
-        "addressCountry": "Kenya"
-      },
-      "contactPoint": {
-        "@type": "ContactPoint",
-        "email": "solutech888@gmail.com",
-        "telephone": "+254790625309"
-      }
-    }
-  </script>
+      "sameAs": "https://soltechssolutions.com"
+    },
+    "educationalLevel": "Beginner to Advanced",
+    "learningResourceType": "Career Guidance",
+    "teaches": [
+      "Frontend Development",
+      "Backend Development",
+      "Full Stack Development",
+      "Artificial Intelligence",
+      "Cybersecurity",
+      "Machine Learning"
+    ]
+  }
+}
+</script>
 
   <style>
     * {
